--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -4,7 +4,8 @@
     "pages/find/find",
     "pages/profile/profile",
     "components/card/card",
-    "components/playlist/playlist"
+    "components/playlist/playlist",
+    "components/input/input"
   ],
   "requiredBackgroundModes": [
     "audio"
