发布页面布局+图片选择

--- a/project.config.json
+++ b/project.config.json
@@ -78,6 +78,12 @@
           "pathName": "pages/musiclist/musiclist",
           "query": "",
           "scene": null
+        },
+        {
+          "name": "pages/publish/publish",
+          "pathName": "pages/publish/publish",
+          "query": "",
+          "scene": null
         }
       ]
     }
