--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -12,7 +12,9 @@
     "pages/player/player",
     "components/lyric/lyric",
     "pages/publish/publish",
-    "pages/blog-detail/blog-detail"
+    "pages/blog-detail/blog-detail",
+    "pages/play-history/play-history",
+    "pages/profile-blog/profile-blog"
   ],
   "requiredBackgroundModes": [
     "audio"
