--- a/project.config.json
+++ b/project.config.json
@@ -90,6 +90,11 @@
           "pathName": "pages/find/find",
           "query": "",
           "scene": null
+        },
+        {
+          "name": "pages/profile/profile",
+          "pathName": "pages/profile/profile",
+          "scene": null
         }
       ]
     }
